# 2025cagd

./: BSplineSubdivide.h  CMakeLists.txt  CurveFitting.cpp  CurveFitting.h  Distance.h  Distance_der.h  Energy.h  Gradient.h  GraphAlgorithm.cpp  README.md  Readtxt.h  SplineInit.cpp  SplineInit.h  Step.h  debugPathPlanning3D.cpp
BVH/: BVH.cpp  BVH.h
BVH/src/: AABB.cc  AABB.h
CCD/: CCD.h
ComputeSeg/: CutMesh.h  Optimization.cpp  Optimization.h  PatchSeg.cpp  PatchSeg.h  SegEnergy.h  SegHeader.h  SegMesh.cpp  SegMesh.h  SegSurface.cpp  SegSurface.h
ComputeSeg/Development/: MeshDevelop.cpp  MeshDevelop.h  MeshTopo.h
ComputeSeg/Refinement/: GaussMin.cpp  GaussMin.h  Merge.cpp  MeshRefine.cpp  MeshRefine.h  README.md  ReSegment.cpp  ReSegment.h  p_smooth.cpp  p_smooth.h
ComputeSeg/Segmentation/: DiffSegCut.cpp  DiffSegCut.h  FiedlerVector.cpp  FiedlerVector.h  SegCut.cpp  Segmentation.cpp  Segmentation.h
Config/: Config.cpp  Config.h
CrossField/: AngleDefectMinimizer.cpp  AngleDefectMinimizer.h  BoolVector.h  LocalParametrization.cpp  LocalParametrization.h  LoopDef.cpp  LoopDef.h  LoopGen.cpp  LoopGen.h  StatisticsMostValues.cpp  StatisticsMostValues.h  covering_space.h  crossField.cpp  crossField.h  dprint.cpp  dprint.h  filesOperator.cpp  filesOperator.h  mathFunctions.cpp  mathFunctions.h
HighOrderCCD/: BSplineFitting.cpp  BSplineFitting.h  GraphAlgorithm.h  Subdivide.h
cmake/: FindEigen3.cmake  FindLIBIGL.cmake  LoadLibs.cmake
